move to lucene index